Replaced URLs with URIs.